# liblink

./: Ar.c  Ar.h  BinaryTree.c  BinaryTree.h  CMakeLists.txt  Elf.c  Elf.h  Hash.c  Hash.h  Linker.c  Linker.h  README.md  Tests.c  Tests.h  Types.c  Types.h  debug.c  debug.h
elf/: compat.h  got.c  got.h  luts.c  luts.h  plt.c  plt.h  reloc.c  reloc.h  target.h
elf/plt/: arm.c  arm.h  arm64.c  arm64.h
elf/reloc/: arm.c  arm.h  arm64.c  arm64.h  util.c  util.h
